2008-07-16  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidLongParameterListsRule.cs: Fix CheckDelegate to work on
	MulticastDelegate definition (no Invoke method is present).

2008-07-10  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Start using ../common.make. Do not build 
	AvoidMessageChainsRule until its false positive rate is lower.

2008-07-09  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidCodeDuplicatedInSameClassRule.cs: Don't add duplicate entries.
	* AvoidCodeDuplicatedInSiblingClassesRule.cs: Reuse (after clearing)
	the existing CodeDuplicatedLocator. Don't add duplicate entries.
	* CodeDuplicatedLocator.cs: Use generic based HashSet instead of 
	StringCollection. Add a Clear method so the instance can be reused.
	* Utilities.cs: Use generics.
	[using both rules on System.dll (2.0 profile) now takes 10 seconds
	instead of 16 seconds]

2008-06-29  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidLongMethodsRule.cs: Fix typo for IsStatic check. Report
	the actual versus maximum IL instruction found (since this is 
	useful to the end user that wants to fix his code).

2008-05-10  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidSpeculativeGeneralityRule.cs: Avoid calling Utilities.
	GetInheritedClassesFrom (since it returns a collection and we only 
	need the count) and replace it by CountInheritedClassesFrom which
	works across all the assembly set of the runner (fix false positive
	in self-test). Also skip inactive rules when checking if the rule
	AvoidUnusedParametersRule is scheduled for execution.

2008-05-06  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidLongParameterListsTest.cs: Don't consider static constructors
	when counting the smallest (# parameters) constructor.

2008-05-03  Sebastien Pouliot  <sebastien@ximian.com> 

	* AvoidLongParameterListsRule.cs: Change some methods to static.
	* AvoidMessageChainsRule.cs: Made IsDelimiter static and compare 