@@ -27,7 +27,7 @@
 //
 
 using System;
-using System.Collections;
+using System.Collections.Generic;
 
 using Mono.Cecil;
 using Mono.Cecil.Cil;
@@ -42,11 +42,11 @@ namespace Gendarme.Rules.Smells {
 		private int maxInstructions = 165;
 		const int AssignationRatio = 7;
 		const int DefaultAmountOfElements = 13;
-		static Hashtable typeMethodDictionary;
+		static Dictionary<string, string> typeMethodDictionary;
 
 		static AvoidLongMethodsRule ()
 		{
-			typeMethodDictionary = new Hashtable ();
+			typeMethodDictionary = new Dictionary<string,string> (4);
 			typeMethodDictionary.Add ("Gtk.Bin", "Build");
 			typeMethodDictionary.Add ("Gtk.Window", "Build");
 			typeMethodDictionary.Add ("Gtk.Dialog", "Build");
@@ -69,8 +69,10 @@ namespace Gendarme.Rules.Smells {
 
 			TypeDefinition type = method.DeclaringType.Resolve ();
 			if ((type != null) && (type.BaseType != null)) {
-				if (typeMethodDictionary.ContainsKey (type.BaseType.FullName))
-					return (String.Compare (method.Name, (string) typeMethodDictionary[type.BaseType.FullName]) == 0);
+				string method_name;
+				if (typeMethodDictionary.TryGetValue (type.BaseType.FullName, out method_name)) {
+					return (method_name == method.Name);
+				}
 			}
 			return false;
 		}
@@ -78,7 +80,7 @@ namespace Gendarme.Rules.Smells {
 		private static int CountStaticFields (TypeDefinition type) {
 			int counter = 0;
 			foreach (FieldDefinition field in type.Fields) {
-				if (field.IsStatic || field.IsInitOnly || field.HasConstant)
+				if (field.IsStatic || field.HasConstant)
 					counter++;
 				//if the field is an array, we should take care
 				//about their elements.
@@ -99,7 +101,7 @@ namespace Gendarme.Rules.Smells {
 		private static int CountInstanceFields (TypeDefinition type) {
 			int counter = 0;
 			foreach (FieldDefinition field in type.Fields) {
-				if (!(field.IsStatic || field.IsInitOnly || field.HasConstant))
+				if (!(field.IsStatic || field.HasConstant))
 					counter++;
 				//I not take care about arrays here.
 			}
@@ -110,8 +112,7 @@ namespace Gendarme.Rules.Smells {
 		{
 			// rule does not apply if method as no code (e.g. abstract, p/invoke)
 			// rule does not apply to code outside the developer's control
-			// rule dess not apply to autogenerated code from some
-			// tools
+			// rule does not apply to autogenerated code from some tools
 			if (!method.HasBody || method.IsGeneratedCode () || IsAutogeneratedByTools (method))
 				return RuleResult.DoesNotApply;
 
